pmm-app/src/pmm-qan/panel/components/Details/Example/ParseError/ParseError.messages.ts
export const Messages = {
  start:
    'Example query is not successfully parsed due to the max query length limit that you set or set by default.\nPlease read ',
  docsLink: 'this',
  rest: ' documentation if you want to change the max query length limit.',
};
